--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,21 @@
-.article-cards {
+.article-list {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  border: 3px pink solid;
   .article-card {
     display: grid;
     grid-template-columns: 40px 300px;
     grid-template-rows: 50px 150px 30px;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
-    max-width: 350px;
+    width: 350px;
+    max-width: 100vw;
     max-height: 250px;
+    margin: 10px;
+    padding: 10px;
+    border: 2px solid blue;
     .article-card-votes {
       grid-area: 1 / 1 / 4 / 2;
     }
