--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     }
   }
 }
+.single-article {
+  max-width: 100vw;
+  .article-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 80vw;
+    .single-article-votes {
+      text-align: center;
+    }
+  }
+  .single-article-img {
+    max-width: 90%;
+    margin: 0 auto;
+  }
+}
