--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,19 @@
     }
   }
 }
+
+.user-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  .user-card {
+    width: 200px;
+    padding: auto;
+    margin: 10px;
+    .user-card-avatar {
+      max-width: 100%;
+      height: 100px;
+    }
+  }
+}
