--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,25 @@
   padding: 0;
 }
 
+button {
+  padding: 5px 10px;
+}
+
 .app {
   padding: 20px;
-  background-color: yellow;
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+
+    .header-main-text {
+      font-size: xx-large;
+    }
+
+    .header-logged-in-avatar {
+      height: 40px;
+    }
+  }
 }
 
 .article-list {
@@ -110,17 +126,6 @@
       max-width: 100%;
       height: 100px;
     }
-  }
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  .header-main-text {
-    font-size: xx-large;
-  }
-  .header-logged-in-avatar {
-    height: 40px;
   }
 }
 
