--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,19 @@
 
 button {
   padding: 5px 10px;
+  margin: 0 5px;
 }
 
 .app {
   padding: 20px;
+  background-color: rgb(255, 240, 246);
 
   .header {
     display: flex;
     justify-content: space-between;
+    background-color: white;
+    margin: 10px 2%;
+    padding: 5px;
 
     .header-main-text {
       font-size: xx-large;
@@ -22,66 +27,88 @@ button {
       height: 40px;
     }
   }
+
+  .nav-bar {
+    background-color: white;
+    margin: 10px 2%;
+    padding: 5px;
+  }
+
+  .articles {
+    background-color: white;
+    margin: 10px 2%;
+    padding: 5px;
+    .article-list {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      border: 3px pink solid;
+      .article-card {
+        display: grid;
+        grid-template-columns: 40px 300px;
+        grid-template-rows: 50px 150px 30px;
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+        width: 350px;
+        max-width: 100vw;
+        max-height: 250px;
+        margin: 10px;
+        padding: 10px;
+        border: 2px solid blue;
+        .article-card-votes {
+          grid-area: 1 / 1 / 4 / 2;
+          text-align: center;
+        }
+        .article-card-title {
+          grid-area: 1 / 2 / 2 / 3;
+        }
+        .article-card-img {
+          grid-area: 2 / 2 / 3 / 3;
+          max-height: 150px;
+          width: 300px;
+          object-fit: cover;
+        }
+        .article-card-info {
+          grid-area: 3 / 2 / 4 / 3;
+          display: flex;
+          justify-content: space-between;
+        }
+      }
+    }
+  }
+
+  .log-in {
+    background-color: white;
+    margin: 10px 2%;
+    padding: 5px;
+  }
+
+  .single-article {
+    max-width: 100vw;
+    background-color: white;
+    margin: 10px 2%;
+    padding: 5px;
+    .single-article-info {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 80vw;
+      .single-article-votes {
+        text-align: center;
+      }
+    }
+    .single-article-img {
+      max-width: 90%;
+      margin: 0 auto;
+    }
+  }
 }
 
 .active-topic {
   background-color: red;
 }
 
-.article-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  border: 3px pink solid;
-  .article-card {
-    display: grid;
-    grid-template-columns: 40px 300px;
-    grid-template-rows: 50px 150px 30px;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    width: 350px;
-    max-width: 100vw;
-    max-height: 250px;
-    margin: 10px;
-    padding: 10px;
-    border: 2px solid blue;
-    .article-card-votes {
-      grid-area: 1 / 1 / 4 / 2;
-      text-align: center;
-    }
-    .article-card-title {
-      grid-area: 1 / 2 / 2 / 3;
-    }
-    .article-card-img {
-      grid-area: 2 / 2 / 3 / 3;
-      max-height: 150px;
-      width: 300px;
-      object-fit: cover;
-    }
-    .article-card-info {
-      grid-area: 3 / 2 / 4 / 3;
-      display: flex;
-      justify-content: space-between;
-    }
-  }
-}
-.single-article {
-  max-width: 100vw;
-  .article-info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 80vw;
-    .single-article-votes {
-      text-align: center;
-    }
-  }
-  .single-article-img {
-    max-width: 90%;
-    margin: 0 auto;
-  }
-}
 .comment-list {
   display: flex;
   flex-direction: row;
