--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,55 @@
 * {
   margin: 0;
   padding: 0;
+  color: #2c302e;
+}
+
+a {
+  color: #84a59d;
+}
+a:active,
+a:visited {
+  color: #f6bd60;
 }
 
 button {
   padding: 5px 10px;
-  margin: 0 5px;
+  margin: 5px;
+  cursor: pointer;
+  background-color: #fff0f6;
 }
 
 .app {
-  padding: 20px;
-  background-color: rgb(255, 240, 246);
+  background-color: #fff0f6;
 
   .header {
     display: flex;
     justify-content: space-between;
-    background-color: white;
-    margin: 10px 2%;
-    padding: 5px;
+    background-color: #2c302e;
+    padding: 5px 20px;
 
     .header-main-text {
+      color: #fff0f6;
       font-size: xx-large;
     }
 
     .header-logged-in-avatar {
       height: 40px;
     }
+
+    .header-logged-in-username {
+      color: #fff0f6;
+    }
   }
 
   .nav-bar {
-    background-color: white;
+    background-color: #fff8f0;
     margin: 10px 2%;
     padding: 5px;
   }
 
   .articles {
-    background-color: white;
+    background-color: #fff8f0;
     margin: 10px 2%;
     padding: 5px;
     .article-list {
@@ -56,6 +70,7 @@ button {
         margin: 10px;
         padding: 10px;
         border: 2px solid blue;
+        cursor: pointer;
         .article-card-votes {
           grid-area: 1 / 1 / 4 / 2;
           text-align: center;
@@ -79,14 +94,14 @@ button {
   }
 
   .log-in {
-    background-color: white;
+    background-color: #fff8f0;
     margin: 10px 2%;
     padding: 5px;
   }
 
   .single-article {
     max-width: 100vw;
-    background-color: white;
+    background-color: #fff8f0;
     margin: 10px 2%;
     padding: 5px;
     .single-article-info {
@@ -106,7 +121,7 @@ button {
 }
 
 .active-topic {
-  background-color: red;
+  background-color: #84a59d;
 }
 
 .comment-list {
@@ -162,4 +177,41 @@ button {
 
 .error-msg {
   color: red;
+}
+
+@media only screen and (min-width: 900px) {
+  .app {
+    .header {
+      grid-area: 1 / 1 / 2 / 3;
+      padding: 10px 100px;
+    }
+
+    .content-container {
+      width: calc(100% - 200px);
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: 200px 1fr;
+      grid-template-rows: 1fr;
+      grid-column-gap: 10px;
+      grid-row-gap: 5px;
+
+      .nav-bar {
+        grid-area: 1 / 1 / 2 / 2;
+        display: flex;
+        flex-direction: column;
+      }
+      .home {
+        grid-area: 1 / 2 / 2 / 3;
+      }
+      .log-in {
+        grid-area: 1 / 2 / 2 / 3;
+      }
+      .single-article {
+        grid-area: 1 / 2 / 2 / 3;
+      }
+      .error-page {
+        grid-area: 1 / 2 / 2 / 3;
+      }
+    }
+  }
 }
