--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   color: #2c302e;
+
 }
 
 a {
@@ -17,6 +18,7 @@ button {
   margin: 5px;
   cursor: pointer;
   background-color: #fff0f6;
+  border-radius: 5px;
 }
 
 .app {
@@ -47,48 +49,52 @@ button {
     margin: 10px 2%;
     padding: 5px;
   }
-
+  .home {
+    background-color: #fff8f0;
+    margin: 10px 2%;
+    padding: 5px;
+  }
   .articles {
     background-color: #fff8f0;
     margin: 10px 2%;
     padding: 5px;
-    .article-list {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: center;
-      border: 3px pink solid;
-      .article-card {
-        display: grid;
-        grid-template-columns: 40px 300px;
-        grid-template-rows: 50px 150px 30px;
-        grid-column-gap: 10px;
-        grid-row-gap: 10px;
-        width: 350px;
-        max-width: 100vw;
-        max-height: 250px;
-        margin: 10px;
-        padding: 10px;
-        border: 2px solid blue;
-        cursor: pointer;
-        .article-card-votes {
-          grid-area: 1 / 1 / 4 / 2;
-          text-align: center;
-        }
-        .article-card-title {
-          grid-area: 1 / 2 / 2 / 3;
-        }
-        .article-card-img {
-          grid-area: 2 / 2 / 3 / 3;
-          max-height: 150px;
-          width: 300px;
-          object-fit: cover;
-        }
-        .article-card-info {
-          grid-area: 3 / 2 / 4 / 3;
-          display: flex;
-          justify-content: space-between;
-        }
+  }
+  .article-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    border: 3px pink solid;
+    .article-card {
+      display: grid;
+      grid-template-columns: 40px 300px;
+      grid-template-rows: 50px 150px 30px;
+      grid-column-gap: 10px;
+      grid-row-gap: 10px;
+      width: 350px;
+      max-width: 100vw;
+      max-height: 250px;
+      margin: 10px;
+      padding: 10px;
+      border: 2px solid blue;
+      cursor: pointer;
+      .article-card-votes {
+        grid-area: 1 / 1 / 4 / 2;
+        text-align: center;
+      }
+      .article-card-title {
+        grid-area: 1 / 2 / 2 / 3;
+      }
+      .article-card-img {
+        grid-area: 2 / 2 / 3 / 3;
+        max-height: 150px;
+        width: 300px;
+        object-fit: cover;
+      }
+      .article-card-info {
+        grid-area: 3 / 2 / 4 / 3;
+        display: flex;
+        justify-content: space-between;
       }
     }
   }
@@ -201,6 +207,9 @@ button {
         flex-direction: column;
       }
       .home {
+        grid-area: 1 / 2 / 2 / 3;
+      }
+      .articles {
         grid-area: 1 / 2 / 2 / 3;
       }
       .log-in {
