--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,16 @@
   margin: 0;
   padding: 0;
   color: #2c302e;
-
 }
 
 a {
+  text-decoration: none;
   color: #84a59d;
 }
+a :visited,
 a:active,
-a:visited {
-  color: #f6bd60;
+a:hover {
+  color: #2c302e;
 }
 
 button {
@@ -21,15 +22,20 @@ button {
   border-radius: 5px;
 }
 
+select {
+  background-color: #fff0f6;
+  border-radius: 2px;
+}
+
 .app {
   background-color: #fff0f6;
-
+  min-height: 100vh;
+  min-width: 100vw;
   .header {
     display: flex;
     justify-content: space-between;
     background-color: #2c302e;
     padding: 5px 20px;
-
     .header-main-text {
       color: #fff0f6;
       font-size: xx-large;
@@ -45,17 +51,17 @@ button {
   }
 
   .nav-bar {
-    background-color: #fff8f0;
+    background-color: #fafffe;
     margin: 10px 2%;
     padding: 5px;
   }
   .home {
-    background-color: #fff8f0;
+    background-color: #fafffe;
     margin: 10px 2%;
     padding: 5px;
   }
   .articles {
-    background-color: #fff8f0;
+    background-color: #fafffe;
     margin: 10px 2%;
     padding: 5px;
   }
@@ -64,7 +70,9 @@ button {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    border: 3px pink solid;
+    margin: 10px;
+    border: 3px #fff0f6 solid;
+    border-radius: 5px;
     .article-card {
       display: grid;
       grid-template-columns: 40px 300px;
@@ -76,7 +84,8 @@ button {
       max-height: 250px;
       margin: 10px;
       padding: 10px;
-      border: 2px solid blue;
+      border: 3px #fff0f6 solid;
+      border-radius: 5px;
       cursor: pointer;
       .article-card-votes {
         grid-area: 1 / 1 / 4 / 2;
@@ -100,14 +109,14 @@ button {
   }
 
   .log-in {
-    background-color: #fff8f0;
+    background-color: #fafffe;
     margin: 10px 2%;
     padding: 5px;
   }
 
   .single-article {
     max-width: 100vw;
-    background-color: #fff8f0;
+    background-color: #fafffe;
     margin: 10px 2%;
     padding: 5px;
     .single-article-info {
@@ -190,6 +199,7 @@ button {
     .header {
       grid-area: 1 / 1 / 2 / 3;
       padding: 10px 100px;
+      color: #fafffe;
     }
 
     .content-container {
