--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   color: #2c302e;
+  font-family: "Montserrat", sans-serif;
 }
 .header-main-text a {
   color: #fff0f6;
