--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,12 @@ a:hover {
   color: #2c302e;
 }
 
+.nav-bar button {
+  margin: 5px;
+}
+
 button {
   padding: 5px 10px;
-  margin: 5px;
   cursor: pointer;
   background-color: #fff0f6;
   border-radius: 5px;
@@ -91,12 +94,13 @@ select {
     .article-card {
       display: grid;
       grid-template-columns: 40px 300px;
-      grid-template-rows: 50px 150px 30px;
+      grid-template-rows: min-content 150px 30px;
       grid-column-gap: 10px;
       grid-row-gap: 10px;
       width: 350px;
       max-width: 100vw;
-      max-height: 250px;
+      min-height: 250px;
+      max-height: auto;
       margin: 10px;
       padding: 10px;
       border: 3px #fff0f6 solid;
@@ -139,9 +143,14 @@ select {
       justify-content: space-between;
       align-items: center;
       max-width: 80vw;
+
       .single-article-votes {
         text-align: center;
       }
+    }
+    .single-article-text {
+      padding-top: 10px;
+      padding-bottom: 20px;
     }
     .single-article-img {
       max-width: 90%;
