--- a/src/App.css
+++ b/src/App.css
@@ -137,13 +137,12 @@ select {
     max-width: 100vw;
     background-color: #fafffe;
     margin: 10px 2%;
-    padding: 5px;
+    padding: 10px 2%;
     .single-article-info {
       display: flex;
       justify-content: space-between;
       align-items: center;
       max-width: 80vw;
-
       .single-article-votes {
         text-align: center;
       }
