--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ select {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 10px;
+    margin: 2%;
     border: 3px #fff0f6 solid;
     border-radius: 5px;
     .article-card {
@@ -98,7 +98,7 @@ select {
       grid-column-gap: 10px;
       grid-row-gap: 10px;
       width: 350px;
-      max-width: 100vw;
+      max-width: 80vw;
       min-height: 250px;
       max-height: auto;
       margin: 10px;
@@ -112,17 +112,19 @@ select {
       }
       .article-card-title {
         grid-area: 1 / 2 / 2 / 3;
+        max-width: 80%;
       }
       .article-card-img {
         grid-area: 2 / 2 / 3 / 3;
         max-height: 150px;
-        width: 300px;
+        width: 80%;
         object-fit: cover;
       }
       .article-card-info {
         grid-area: 3 / 2 / 4 / 3;
         display: flex;
         justify-content: space-between;
+        width: 80%;
       }
     }
   }
@@ -254,6 +256,40 @@ select {
       .error-page {
         grid-area: 1 / 2 / 2 / 3;
       }
+    }
+  }
+  .article-card {
+    display: grid;
+    grid-template-columns: 40px auto;
+    grid-template-rows: min-content 150px 30px;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    width: 200px;
+    max-width: 100vw;
+    min-height: 250px;
+    max-height: auto;
+    margin: 10px;
+    padding: 10px;
+    border: 3px #fff0f6 solid;
+    border-radius: 5px;
+    cursor: pointer;
+    .article-card-votes {
+      grid-area: 1 / 1 / 4 / 2;
+      text-align: center;
+    }
+    .article-card-title {
+      grid-area: 1 / 2 / 2 / 3;
+    }
+    .article-card-img {
+      grid-area: 2 / 2 / 3 / 3;
+      max-height: 150px;
+      width: 300px;
+      object-fit: cover;
+    }
+    .article-card-info {
+      grid-area: 3 / 2 / 4 / 3;
+      display: flex;
+      justify-content: space-between;
     }
   }
 }
