--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Open+Sans:wght@400;700&family=Ubuntu:wght@300;400&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   color: #2c302e;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", "Open Sans", "Ubuntu", sans-serif;
+  /* font-family: "Open Sans", sans-serif;
+  font-family: "Ubuntu", sans-serif;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+}
+h1 {
+  font-weight: 700;
 }
 
 .header-main-text a {
@@ -207,6 +214,48 @@ select {
   flex-direction: column;
   justify-content: center;
   .comment-card {
+    border: 1px solid #84a59d;
+    border-radius: 1px;
+    padding: 5px;
+    margin: 2px auto;
+    width: 92%;
+    .comment-card-first-line {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      overflow: hidden;
+      .comment-card-avatar-background {
+        background-color: #fff0f6;
+        height: 40px;
+        width: 40px;
+        border-radius: 100%;
+        display: flex;
+        .comment-card-avatar {
+          mix-blend-mode: multiply;
+          margin: 0 auto;
+        }
+      }
+      .comment-card-author {
+        align-self: center;
+        padding: 0 5px;
+      }
+      .comment-card-date {
+        color: #2c302e5c;
+        font-size: 10px;
+      }
+    }
+    .comment-card-body {
+      margin-left: 20px;
+    }
+    .comment-card-votes {
+      display: flex;
+      align-items: center;
+      .comment-card-votes-text {
+        padding: 0 10px;
+      }
+    }
+  }
+  /* .comment-card {
     display: grid;
     grid-template-columns: auto 40px;
     grid-template-rows: auto auto;
@@ -234,7 +283,7 @@ select {
         margin: 0;
       }
     }
-  }
+  } */
 }
 
 .user-list {
