--- a/src/App.css
+++ b/src/App.css
@@ -222,26 +222,32 @@ select {
     .comment-card-first-line {
       display: flex;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: space-between;
       overflow: hidden;
-      .comment-card-avatar-background {
-        background-color: #fff0f6;
-        height: 40px;
-        width: 40px;
-        border-radius: 100%;
+      .comment-card-first-left {
         display: flex;
-        .comment-card-avatar {
-          mix-blend-mode: multiply;
-          margin: 0 auto;
+        justify-content: flex-start;
+        align-items: center;
+        .comment-card-avatar-background {
+          background-color: #fff0f6;
+          height: 40px;
+          width: 40px;
+          border-radius: 100%;
+          display: flex;
+          .comment-card-avatar {
+            mix-blend-mode: multiply;
+            margin: 0 auto;
+            max-width: 100%;
+          }
         }
-      }
-      .comment-card-author {
-        align-self: center;
-        padding: 0 5px;
-      }
-      .comment-card-date {
-        color: #2c302e5c;
-        font-size: 10px;
+        .comment-card-author {
+          align-self: center;
+          padding: 0 5px;
+        }
+        .comment-card-date {
+          color: #2c302e5c;
+          font-size: 10px;
+        }
       }
     }
     .comment-card-body {
@@ -255,35 +261,6 @@ select {
       }
     }
   }
-  /* .comment-card {
-    display: grid;
-    grid-template-columns: auto 40px;
-    grid-template-rows: auto auto;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    align-items: center;
-    border: 1px solid #84a59d;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 2px auto;
-    width: 92%;
-    .comment-card-body {
-      grid-area: 1 / 1 / 2 / 2;
-      margin: 0;
-    }
-    .comment-card-info {
-      grid-area: 2 / 1 / 3 / 2;
-      display: flex;
-      justify-content: space-around;
-    }
-    .comment-card-votes {
-      grid-area: 1 / 2 / 3 / 3;
-      text-align: center;
-      .comment-card-votes-text {
-        margin: 0;
-      }
-    }
-  } */
 }
 
 .user-list {
